--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Repman_Georgiy/LineFollower"]
-	path = Repman_Georgiy/LineFollower
-	url = https://github.com/repmanga/LineFollower.git
+[submodule "Line-follower"]
+	path = Line-follower
+	url = https://github.com/repmanga/Line-Follower.git
