--- a/Dunaev_Alexander/net/Makefile
+++ b/Dunaev_Alexander/net/Makefile
@@ -1,8 +1,11 @@
 CXX = g++
 CXXFLAGS = -std=c++23 -pthread -Wall
-TARGETS = server client
+TARGETS = server client logger
 
 all: $(TARGETS)
+
+logger: logger.cxx
+	$(CXX) $(CXXFLAGS) -o logger logger.cxx
 
 server: server.cxx
 	$(CXX) $(CXXFLAGS) -o server server.cxx
